Fix spacing

--- a/_assets/css/components/intro.scss
+++ b/_assets/css/components/intro.scss
@@ -10,7 +10,7 @@
 
   img {
     float: right;
-    margin: 0 0 5vw 5vw;
+    margin: 0 0 1em 5vw;
     width: 180px;
     max-width: 33%;
     min-width: 70px;
